--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 add_subdirectory(unittests)
-if(BUILD_PYT)
-    add_subdirectory(gemm_dequantize)
-    add_subdirectory(moe)
-    add_subdirectory(int8_gemm)
-endif()
+# if(BUILD_PYT)
+#     add_subdirectory(gemm_dequantize)
+#     add_subdirectory(moe)
+#     add_subdirectory(int8_gemm)
+# endif()
